# nebula

./: .clang-format  .editorconfig  .gitignore  ARTIFACT_POLICY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_PROCESS.md  RELEASE_REPOSITORY  ROADMAP.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: contract-tests.yml  release.yml
benchmarks/app_platform/: README.md  matrix.json
benchmarks/backend_crypto/: README.md  matrix.json
cli/: build_run.cpp  cli_shared.hpp  dispatch.cpp  json.cpp  json.hpp  main.cpp  parse.cpp  project.cpp  project.hpp  tooling.cpp
codegen/: cpp_backend.cpp  cpp_backend.hpp
docs/: app_local_substrate.md  app_platform_convergence.md  backend_developer_guide.md  backend_operator_guide.md  import_library_performance.md  install_lifecycle.md  media_player_validation_app.md  official_package_tiering.md  post_1_0_workstreams.md  quantum_communication_convergence.md  rc_checklist_v1.0.md  release_signoff.md  release_verification.md  reverse_proxy_deployment.md  service_profile.md  stability_policy.md  support_matrix.md  system_profile.md  thin_host_app_shell.md  universeos_convergence.md
examples/: hot_loop.nb  interop_cli.nb  owner_hot_path.nb  region_escape.nb  smoke.nb
examples/c_abi_export/: consumer.c  consumer.cpp  nebula.toml
examples/cli_service_workspace/: README.md
examples/crypto_hash_cli/: nebula.toml
examples/crypto_pqc_cli/: nebula.toml
examples/hello_api/: README.md  nebula.toml
examples/http_hello_once/: nebula.toml
examples/http_json_echo_once/: nebula.toml
examples/http_route_param_once/: nebula.toml
examples/interop_project/: host.cpp  nebula.toml
examples/local_ops_console_ui/: README.md  nebula.toml
examples/pqc_secure_service/: README.md  nebula.toml
examples/pqc_signed_service/: README.md  nebula.toml
examples/project_cli/: README.md  nebula.toml
examples/qcomm_bb84_lab/: README.md  nebula.toml
examples/release_control_plane_workspace/: README.md  (+1 more)
frontend/: ast.hpp  diagnostic.hpp  errors.hpp  external_contract.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  runtime_profile.hpp  source.hpp  token.hpp  typecheck.cpp  typecheck.hpp  typed_ast.hpp  types.hpp
nir/: cfg.cpp  cfg.hpp  cfg_ir.cpp  cfg_ir.hpp  ir.hpp  lower.cpp  lower.hpp  runtime_ops.hpp
passes/: async_explain.cpp  async_explain.hpp  borrow_xstmt.cpp  borrow_xstmt.hpp  call_target_resolver.cpp  call_target_resolver.hpp  epistemic_lint.cpp  epistemic_lint.hpp  escape_analysis.cpp  escape_analysis.hpp  rep_owner_infer.cpp  rep_owner_infer.hpp
runtime/: nebula_runtime.hpp  region_allocator.hpp
scripts/: app_platform_bench.py  competitive_bench.py  generate_release_manifest.py  generate_release_sbom.py  install.ps1  install.sh  package_release.py  perf_baseline_diff.py  release_lib.py  release_signoff.py  render_homebrew_formula.py  run_bench.sh  run_cross_stage_baseline.sh  sync_tls_root_bundle.py  verify_linux_backend_ga_hardening.sh  verify_release_control_plane_standard.py
spec/: SPEC.md  cli_contract.md  diagnostics.md  escape_analysis.md  experimental_infra.md  generics_policy.md  grammar.ebnf  interop_c_abi.md  language_core.md  region_semantics.md  rep_owner_model.md  safety_contract.md  static_analysis.md  tooling_cli.md
std/: bytes.nb  env.nb  fs.nb  http.nb  http_json.nb  json.nb  log.nb  net.nb  process.nb  result.nb  task.nb  time.nb
tests/: README.md  lsp_smoke.py  requirements.txt  run.py
(+1249 files in other folders)
